import java.time.Clock

plugins {
    id 'java'
    id 'application'
    id 'com.google.cloud.tools.jib' version '3.1.4'
}

group 'dev.gigafyde'
mainClassName = 'dev.gigafyde.apollo.Main'
sourceCompatibility = 16
targetCompatibility = 16

repositories {
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {

    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.3.1'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.8'
    implementation group: 'io.sentry', name: 'sentry-logback', version: '5.5.0'
    implementation group: 'com.github.walkyst', name: 'lavaplayer-fork', version: '1.3.96'
    implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.78'
    implementation group: 'com.github.Walkyst', name: 'Lavalink-Client', version: 'b7159c796e'
    implementation group: 'com.github.aasmart', name:'jda', version: 'feature~context-menus-SNAPSHOT'
}

jib {
    from {
        image = 'adoptopenjdk/openjdk16:jre-16.0.1_9-ubuntu'
    }

    container {
        mainClass = 'dev.gigafyde.apollo.Main'
        creationTime = Clock.systemUTC().instant()
    }
}

compileJava {
    classpath = sourceSets.main.compileClasspath
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
}
